[tool.poetry]
name = "good-habit-cw"
version = "0.1.0"
description = ""
authors = ["Sergey Korchmin <sergey.korchmin@yandex.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
django = "^5.1.2"
psycopg2-binary = "^2.9.10"
python-decouple = "^3.8"
djangorestframework = "^3.15.2"
pillow = "^11.0.0"
djangorestframework-simplejwt = "^5.3.1"
drf-yasg = "^1.21.8"
setuptools = "^75.2.0"
celery = "^5.4.0"
eventlet = "^0.37.0"
redis = "^5.1.1"
requests = "^2.32.3"
django-celery-beat = "^2.7.0"
django-cors-headers = "^4.5.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
